# ai-web-research

./: .gitignore  README.md  pyproject.toml
config/: crawler.yaml  extraction_schema.example.json
scripts/: verify_mcp_server.py
src/crawler/: __init__.py  cli.py  config.py  extract.py  fetcher.py  frontier.py  llm.py  mcp_server.py  normalize.py  ratelimit.py  research.py  robots.py  run.py  security.py  semantic_extract.py  sitemap.py  store.py
tests/: test_extract.py  test_frontier.py  test_frontier_persistence.py  test_llm.py  test_normalize.py  test_ratelimit.py  test_research.py  test_robots.py  test_security.py  test_semantic_extract.py  test_sitemap.py  test_store.py
tests/fixtures/: sample.html
