[project]
name = "ai-web-research"
version = "0.1.0"
description = "Stage 1 AI crawler: reliable single-site fetch, parse, dedup and metadata tracking"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.6",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
crawler = "crawler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
